Rearranged Contact Area

--- a/PortfolioInformation.ipynb
+++ b/PortfolioInformation.ipynb
@@ -53,7 +53,68 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### Contact Me Form Code:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "html"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "<div class=\"infoCard\">\n",
+    "    <h3 id=\"contact\">\n",
+    "      <center>Contact Me:</center>\n",
+    "    </h3>\n",
+    "\n",
+    "    <!-- Contact Form: -->\n",
+    "    <div class=\"form\">\n",
+    "      <input\n",
+    "        type=\"text\"\n",
+    "        class=\"formButtons\"\n",
+    "        id=\"firstName\"\n",
+    "        placeholder=\"First Name:\"\n",
+    "        required\n",
+    "      />\n",
+    "      <input\n",
+    "        type=\"text\"\n",
+    "        class=\"formButtons\"\n",
+    "        id=\"lastName\"\n",
+    "        placeholder=\"Last Name:\"\n",
+    "        required\n",
+    "      />\n",
+    "      <br />\n",
+    "      <input\n",
+    "        type=\"email\"\n",
+    "        class=\"formButtons\"\n",
+    "        id=\"email\"\n",
+    "        placeholder=\"Email:\"\n",
+    "        required\n",
+    "      />\n",
+    "      <br />\n",
+    "      <textarea\n",
+    "        placeholder=\"Message:\"\n",
+    "        id=\"message\"\n",
+    "        class=\"formButtons\"\n",
+    "        required\n",
+    "      ></textarea\n",
+    "      ><br />\n",
+    "      <button\n",
+    "        onclick=\"\"\n",
+    "        id=\"submitButton\"\n",
+    "        class=\"formButtons\"\n",
+    "        disabled\n",
+    "      >\n",
+    "        Submit\n",
+    "      </button>\n",
+    "    </div>\n",
+    "  </div>"
+   ]
   }
  ],
  "metadata": {
