Added info to jupyter notebook and other bug fixes

--- a/PortfolioInformation.ipynb
+++ b/PortfolioInformation.ipynb
@@ -14,8 +14,22 @@
     "## Index:\n",
     "\n",
     "### 1. About me\n",
-    "### 2. Tech Stack \n",
-    "### 3. Projects"
+    "### 2. Technologies Stack \n",
+    "### 3. Projects\n",
+    "### 4. Contact Information"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Theme Color Palettes:\n",
+    "\n",
+    "##### Lightly Invincible:\n",
+    "<img src=\"https://github.com/jadnell555/jadnell555.github.io/blob/main/Images/Color%20Palettes/Portfolio%20Light%20Mode%20.png?raw=true\" alt=\"Lightly Invincible Theme Color Palette\" width=\"300\" height=\"400\" class=\"blog-image\">\n",
+    "\n",
+    "##### Medellin's Sunset:\n",
+    "##### Wiz's Dark Theme:"
    ]
   },
   {
