Added bootstrap to frameworks section

--- a/PortfolioInformation.ipynb
+++ b/PortfolioInformation.ipynb
@@ -62,7 +62,8 @@
     "| GitHub |GitHub is a code hosting platform for version control and collaboration. It lets you and others work together on projects from anywhere.|https://docs.github.com/en/get-started/quickstart/hello-world |\n",
     "| Jupyter Notebooks | Jupyter Notebook is a simplified notebook authoring application, and is a part of Project Jupyter, a large umbrella project centered around the goal of providing tools (and standards) for interactive computing with computational notebooks. A computational notebook is a shareable document that combines computer code, plain language descriptions, data, rich visualizations like 3D models, charts, graphs and figures, and interactive controls. | https://jupyter-notebook.readthedocs.io/en/stable/|\n",
     "| Flutter | Flutter is an open source framework by Google for building beautiful, natively compiled, multi-platform applications from a single codebase. | https://flutter.dev/ |\n",
-    "| Django | Django is a high-level Python web framework that encourages rapid development and clean, pragmatic design. Built by experienced developers, it takes care of much of the hassle of web development, so you can focus on writing your app without needing to reinvent the wheel. It’s free and open source. | https://www.djangoproject.com/ |"
+    "| Django | Django is a high-level Python web framework that encourages rapid development and clean, pragmatic design. Built by experienced developers, it takes care of much of the hassle of web development, so you can focus on writing your app without needing to reinvent the wheel. It’s free and open source. | https://www.djangoproject.com/ |\n",
+    "| Bootstrap | Bootstrap is the most popular CSS Framework for developing responsive and mobile-first websites. Bootstrap 5 is the newest version of Bootstrap. | https://www.w3schools.com/whatis/whatis_bootstrap.asp |"
    ]
   },
   {
