Filled projects information

--- a/PortfolioInformation.ipynb
+++ b/PortfolioInformation.ipynb
@@ -23,26 +23,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Theme Color Palettes:\n",
-    "\n",
-    "##### Lightly Invincible:\n",
-    "<img src=\"https://github.com/jadnell555/jadnell555.github.io/blob/main/Images/Color%20Palettes/Portfolio%20Light%20Mode%20.png?raw=true\" alt=\"Lightly Invincible Theme Color Palette\" width=\"300\" height=\"400\" class=\"blog-image\">\n",
-    "\n",
-    "##### Medellin's Sunset:\n",
-    "##### Wiz's Dark Theme:"
+    "## ABOUT ME:\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Tech Stack Information Links: "
+    "## TECHNOLOGIES STACK:"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Tech Stack Information Links: \n",
+    "\n",
     "| Programming Languages and Software | Description | Source |\n",
     "| ---------------------------------- | ----------- | ------ |\n",
     "| HTML |HTML is the language in which most websites are written. HTML is used to create pages and make them functional. HTML stands for Hyper Text Markup Language | https://html.com/ |\n",
@@ -70,72 +66,138 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Contact Me Form Code:"
+    "## PROJECTS:"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "html"
-    }
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "<div class=\"infoCard\">\n",
-    "    <h3 id=\"contact\">\n",
-    "      <center>Contact Me:</center>\n",
-    "    </h3>\n",
+    "### 1. Capstone Project: DEPO Web App\n",
     "\n",
-    "    <!-- Contact Form: -->\n",
-    "    <div class=\"form\">\n",
-    "      <input\n",
-    "        type=\"text\"\n",
-    "        class=\"formButtons\"\n",
-    "        id=\"firstName\"\n",
-    "        placeholder=\"First Name:\"\n",
-    "        required\n",
-    "      />\n",
-    "      <input\n",
-    "        type=\"text\"\n",
-    "        class=\"formButtons\"\n",
-    "        id=\"lastName\"\n",
-    "        placeholder=\"Last Name:\"\n",
-    "        required\n",
-    "      />\n",
-    "      <br />\n",
-    "      <input\n",
-    "        type=\"email\"\n",
-    "        class=\"formButtons\"\n",
-    "        id=\"email\"\n",
-    "        placeholder=\"Email:\"\n",
-    "        required\n",
-    "      />\n",
-    "      <br />\n",
-    "      <textarea\n",
-    "        placeholder=\"Message:\"\n",
-    "        id=\"message\"\n",
-    "        class=\"formButtons\"\n",
-    "        required\n",
-    "      ></textarea\n",
-    "      ><br />\n",
-    "      <button\n",
-    "        onclick=\"\"\n",
-    "        id=\"submitButton\"\n",
-    "        class=\"formButtons\"\n",
-    "        disabled\n",
-    "      >\n",
-    "        Submit\n",
-    "      </button>\n",
-    "    </div>\n",
-    "  </div>"
+    "- **Description:** This Capstone Project was developed for the Office of Special Investigations of ASG (“Administracion de Servicios Generales de Puerto Rico”), which requires exempt and governmental entities with some delegation, to submit monthly reports of the purchases made. The **Digital Exempt Procurement Oversight** (DEPO) web application was developed to automate the audit process and expedite the workflow by providing government agencies with a user-friendly portal, minimizing errors, and speeding up data entry. This project focused on the user-side of the web app, as in, the part that ASG employees will interact with. The client-side was handled by another team that was in close contact with ours to ensure compatibility. For security reasons, the source code of this project is not available. \n",
+    "\n",
+    "\n",
+    "- **Status:** Completed \n",
+    "- **Type of project:** University \n",
+    "- **Tech Stack Implemented:**\n",
+    "  - Bootstrap\n",
+    "  - CSS\n",
+    "  - Django\n",
+    "  - GitHub\n",
+    "  - HTML\n",
+    "  - JavaScript \n",
+    "  - Python \n",
+    "  - SQL\n",
+    "  - Visual Studio Code\n",
+    "- **Source:** N/A\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- **Images:**\n",
+    "  - #1\n",
+    "  - #2\n",
+    "  - #3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. My Portfolio (This Project)\n",
+    "\n",
+    "- **Description:** My portfolio is the current webpage you're on and works as a summary and collection of projects, experiences and knowledge I have gained up to now. While, it also includes contact information, such as: social media, a contact form and even my Resume. It was implemented using GitHub pages which is a static site hosting service provided by GitHub. I decided to use this service since it is free and because of it's ease of use and maintenance. Since its hosted in a static site I utilized another service to handle the contact form called pageclip. This project was developed after I graduated college in July 2023. \n",
+    "- **Status:** In progress \n",
+    "- **Type of project:** Personal \n",
+    "- **Tech Stack Implemented:**\n",
+    "  - Bootstrap\n",
+    "  - CSS\n",
+    "  - GitHub\n",
+    "  - HTML\n",
+    "  - JavaScript \n",
+    "  - Jupyter Notebook\n",
+    "  - Visual Studio Code\n",
+    "- **Source:** https://github.com/jadnell555/jadnell555.github.io"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. Haresh Quiz Game\n",
+    "\n",
+    "- **Description:** Haresh Quiz Game consists of 20 questions. You start with three lives and every time you answer a question incorrectly you lose one. If you lose all of your lives it's game over. If you reach the end without losing all of your lifes, you win. In this program we use the graphics.py module from John Zelle's *Python Programming: An Introduction to Computer Science* book to generate a simple GUI (Graphical User Interface) for the game. The project has three versions. Version A uses only conditional logic. Version B implemented functions to simplify the code. Lastly, in Version C classes were used to simplify it even further.   \n",
+    "- **Status:** Completed \n",
+    "- **Type of project:** University \n",
+    "- **Tech Stack Implemented:**\n",
+    "  - GitHub\n",
+    "  - Python \n",
+    "  - Visual Studio Code\n",
+    "- **Source:** https://github.com/jadnell555/reyes_109739_project01_HareshQuizGame"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4. DC Motor: Control, Direction and PWM\n",
+    "\n",
+    "- **Description:** The purpose of this project was to power a DC (Direct Current) motor and control it's motion using an Arduino board powered by a laptop and C++. The speed of the motor can be altered by manipulating its driving voltage. This project consisted of three parts. First, we had to connect and test the DC motor to the Arduino board. Secondly, we had to generate code that would increase the motor's speed by 10% every 5 seconds using PWM (Pulse Width Modulation). Lastly, the DC motor had to be controlled with the keyboard's input using the serial port or the Arduino board. \n",
+    "- **Status:** Completed \n",
+    "- **Type of project:** University \n",
+    "- **Tech Stack Implemented:**\n",
+    "  - Arduino\n",
+    "  - C++\n",
+    "  - GitHub\n",
+    "- **Source:** https://github.com/jadnell555/CollegeProjects/tree/main/Arduino/Microcomputer%20Interfacing%20Lab/Lab%205%20-%20DC%20Motor\n",
+    "- **Youtube Link:** https://youtu.be/KwMOkR7ds_U "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5. Stepper Motor\n",
+    "\n",
+    "- **Description:** The purpose of this project was to control the motion of a Stepper motor using an Arduino board powered by a laptop and C++. The stepper motor used in this project was a 28BYJ-48 with Gear Reduction. This motor has a good torque for its size but a relatively slow motion. After connecting the motor and ensuring it worked correctly the objective was to generate code so that the stepper motor would carry out the following functions: rotate clockwise continuously, rotate counterclockwise continuously, rotate a specific number of steps clockwise, rotate a specific number of steps counterclockwise and stop. These functions would be triggered by entering its respective command in the keyboard. \n",
+    "- **Status:** Completed \n",
+    "- **Type of project:** University \n",
+    "- **Tech Stack Implemented:**\n",
+    "  - Arduino\n",
+    "  - C++\n",
+    "  - GitHub\n",
+    "- **Source:** https://github.com/jadnell555/CollegeProjects/tree/main/Arduino/Microcomputer%20Interfacing%20Lab/Lab%206%20-%20Stepper%20Motor\n",
+    "- **Youtube Link:** https://youtu.be/WMJqQuGLzes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## CONTACT INFORMATION:\n"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.13"
   },
   "orig_nbformat": 4
  },
