--- a/PortfolioInformation.ipynb
+++ b/PortfolioInformation.ipynb
@@ -219,7 +219,7 @@
     "\n",
     "| Programming Languages and Software | Description | Source |\n",
     "| ---------------------------------- | ----------- | ------ |\n",
-    "| HTML |HTML is the language in which most websites are written. HTML is used to create pages and make them functional. HTML stands for Hyper Text Markup Language | https://html.com/ |\n",
+    "| HTML |HTML is the language in which most websites are written. HTML is used to create pages and make them functional. HTML stands for Hyper Text Markup Language. | https://html.com/ |\n",
     "| CSS | Cascading Style Sheets (CSS) is a simple mechanism for adding style (e.g., fonts, colors, spacing) to Web documents. | https://www.w3.org/Style/CSS/Overview.en.html |\n",
     "| JavaScript | JavaScript is a scripting or programming language that allows you to implement complex features on web pages — every time a web page does more than just sit there and display static information for you to look at — displaying timely content updates, interactive maps, animated 2D/3D graphics, scrolling video jukeboxes, etc. | https://developer.mozilla.org/en-US/docs/Learn/JavaScript/First_steps/What_is_JavaScript |\n",
     "| Python | Python is an interpreted, interactive, object-oriented programming language. It incorporates modules, exceptions, dynamic typing, very high level dynamic data types, and classes. It supports multiple programming paradigms beyond object-oriented programming, such as procedural and functional programming. Python combines remarkable power with very clear syntax. | https://docs.python.org/3/faq/general.html#what-is-python |\n",
